--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "f9eed040-fde9-4fb2-8416-1d7945580705"
+      "id": "e26b5826-2ac9-429a-b246-52774f95c0d9"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "e351929e-031f-4e19-8c9b-3e546f30974d"
+      "id": "641e7ad0-72ee-4295-9504-0b78b2a16728"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "79a4b4a3-58a3-4d68-859d-5698587a7d2d"
+      "id": "dc161046-f73e-48dc-8772-c2d130ade71d"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "224b6252-0920-44b3-9e02-bcd4db18a4c7"
+      "id": "41c99fac-949e-4950-9b74-5a6234149b21"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "13f036c1-1b80-468b-bb92-43157d171d9b"
+      "id": "a78ce92a-a47f-497a-9010-0ce286d939fa"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "deaa514b-57fd-4750-925d-41e4db003cdf"
+      "id": "921ea4f1-196a-4f2e-9aa8-3dfeaeef126b"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "a5d48b3d-1e2c-44e5-8057-3116ca82ca09"
+      "id": "fa12c42d-3d2e-4d5a-bfdc-2fc3d2c98110"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "8a5ada7c-bb69-47ac-a4b9-c4876fe81588"
+      "id": "559891d1-ed14-4cc3-afd8-dcb464950c49"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "b87bd061-4c91-4c95-951d-adcdc810be10"
+      "id": "bf4ea3bc-391b-462a-8dbb-72f33744a331"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "0e2e7f52-4277-473e-84af-68e6524d8ee7"
+      "id": "2e12ae06-ea66-4a94-ba4b-f817608bbef4"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "50b07fed-5f52-4e76-ba7b-d2d44146cfed"
+      "id": "59e75f5c-6801-48c7-8670-5be0a6021c77"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "f5317d43-cec1-4c44-b6a4-308567da295c"
+      "id": "277e9c32-22d8-4b5d-a9a7-0aecff9fa6fe"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "70dcfd9f-fa32-45e8-9698-093d06ff9f86"
+      "id": "43212414-2f10-4ae6-b496-9174c3403b9a"
     },
     {
       "cell_type": "code",
@@ -694,7 +694,7 @@
         "“선형변환+비선형변환”이 반복되는 구조이다. “선형변환+비선형변환”을\n",
         "하나의 세트로 보면 아래와 같이 표현할 수 있다.\n",
         "\n",
-        "-   $\\underset{(n,1)}{\\bf X}  \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad  \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
         "\n",
         "이것을 다이어그램으로 표현한다면 아래와 같다.\n",
         "\n",
@@ -855,7 +855,7 @@
         "\n",
         "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
         "\n",
-        "<figure class=\"margin-caption\">\n",
+        "<figure>\n",
         "<img\n",
         "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
         "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
@@ -864,7 +864,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "b03bbfd0-f1e2-4580-8500-9943531e68c8"
+      "id": "c95339fd-6566-4653-849c-f66b75fa896f"
     },
     {
       "cell_type": "code",
@@ -897,7 +897,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "522ae71c-0739-4684-b1df-919f155f5018"
+      "id": "865d5cfc-c35d-4802-9b24-249c779409d9"
     }
   ],
   "nbformat": 4,
