--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "99688814-61e8-411e-a7b8-1f22c4f1a21c"
+      "id": "c0a914fe-022a-4028-8518-cda55f13f2f0"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "e149cc9b-df28-4a55-98e2-9b3ee8a71fed"
+      "id": "337160c1-a0ad-4f9f-80df-53c82f92cb15"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "e92bc216-1e55-4b78-8b45-fa03eafb5957"
+      "id": "54320494-3091-4bb4-9602-59b12cc6b159"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "53228228-0a65-441c-b977-6b1128a7446f"
+      "id": "9a30fbfd-9aee-419a-8a41-e3b631090b0e"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "d8791497-c1cd-42af-be86-9e289479f8ed"
+      "id": "568eb004-5193-4af5-86fa-046b9b8b2a92"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "c5200f4e-7655-4abf-abba-e5ba121d17b5"
+      "id": "4b852c6a-666b-4a53-9c7f-f0e4e44eb251"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "5cfc75df-b16b-43bf-b7e6-674ddc848d6d"
+      "id": "b03aa1aa-ef04-41e1-97ea-e945cf3cf113"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "af1573b6-875a-4f04-a4fc-11b2cd6aeadd"
+      "id": "17437949-e234-412d-a641-4ad1c0a58ab3"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "9d7e1a54-1c91-4728-8995-6cb38c8c7dc8"
+      "id": "53b457cc-f647-4ba3-8139-337b69f8d99f"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "acfa14ae-c837-4508-b918-fe0bb3d394ed"
+      "id": "d515ea43-a2da-4941-a16c-d2d32e7a8ab5"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "ef9c14f3-2b80-441c-8849-a3cafe7b9138"
+      "id": "26ef7197-26ea-4fdb-b665-5795a490ccc0"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "33bdb551-c1df-4bcc-bbdb-3b76f6b0c785"
+      "id": "286edf03-a2c5-4906-953e-491be9513e22"
     },
     {
       "cell_type": "code",
@@ -491,71 +491,15 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix}\n",
-        "1.2200 & 0.4900 \\\\\n",
-        "1.1700 & 0.4400 \\\\\n",
-        "1.2100 & -0.4500 \\\\\n",
-        "1.2000 & -0.5000 \\\\\n",
-        "-1.2000 & 0.5100 \\\\\n",
-        "-1.2300 & 0.4800 \\\\\n",
-        "-1.2000 & -0.4800 \\\\\n",
-        "-1.1900 & -0.4900 \\\\\n",
-        "0.2000 & 0.0000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
-        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
-        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
-        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
-        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
-        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
-        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
-        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
-        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
-        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
-        "1.2100 \\\\\n",
-        "1.2500 \\\\\n",
-        "1.1000 \\\\\n",
-        "1.1100 \\\\\n",
-        "1.1200 \\\\\n",
-        "1.1300 \\\\\n",
-        "1.1400 \\\\\n",
-        "1.1200 \\\\\n",
-        "3.6000\n",
-        "\\end{bmatrix} +\\begin{bmatrix}\n",
-        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
-        "\\end{bmatrix}\\\\ \\\\\n",
-        "=~& \\begin{bmatrix}\n",
-        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
-        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
-        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
-        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
-        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
-        "\\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
-        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
-        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
-        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
-        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
-        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
-        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
-        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
-        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
-        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -572,7 +516,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "3b4912fc-a3d3-404f-9604-245fe469ba67"
+      "id": "2d76aff0-9337-405f-8b9d-5c5e76be29d8"
     },
     {
       "cell_type": "code",
@@ -692,7 +636,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "2d6649b1-2ad0-46f2-9d24-294c3b2e929d"
+      "id": "2b207ee5-36dc-4ae3-a106-62649756b124"
     },
     {
       "cell_type": "code",
@@ -713,7 +657,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "c86514e2-29ce-46dc-81e0-0aeb62030812"
+      "id": "13ead6e9-e355-440b-9bea-3ad1153b10c4"
     },
     {
       "cell_type": "code",
@@ -748,7 +692,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "03543df9-91f5-4cb7-b916-feaced757cd8"
+      "id": "3dadf2e6-3917-417b-a6b7-527a9bbc6870"
     },
     {
       "cell_type": "code",
@@ -800,7 +744,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "531343c8-cc1d-4150-9b11-d64a9b4a6eb3"
+      "id": "e879fe3e-338d-4e25-b3b4-7215c042e5b6"
     },
     {
       "cell_type": "code",
@@ -825,7 +769,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "a950afff-e43f-4dbd-bc4b-5904c572278c"
+      "id": "1de8cd43-8416-4b04-80f6-bfa96ac6fb12"
     },
     {
       "cell_type": "code",
@@ -867,7 +811,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "3a19c914-6b29-47c4-a335-828c2de7aa7c"
+      "id": "387f2f54-99c5-4e70-a4fe-becea7c80559"
     },
     {
       "cell_type": "code",
@@ -890,7 +834,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "c7250d19-d5e2-43af-a322-7ff0f7f27e32"
+      "id": "c285e29e-8c8f-448d-8f20-ea7a67836ee9"
     },
     {
       "cell_type": "code",
@@ -922,7 +866,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "c901f11e-6302-4d96-8ac5-e845d73ead91"
+      "id": "ae02aeff-a244-4b8e-aee8-ebbc4d3bfc07"
     },
     {
       "cell_type": "code",
@@ -942,7 +886,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "4d93739c-8254-4de6-881a-1f22d7a7e549"
+      "id": "e1260e91-68ec-49cc-acc7-3fe77764ad08"
     },
     {
       "cell_type": "code",
@@ -976,7 +920,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "3e43c90e-27e8-4a79-bcc5-3a90c5b14173"
+      "id": "8726e42e-ba6a-4431-9ffa-bb7b0bf8806d"
     },
     {
       "cell_type": "code",
@@ -997,7 +941,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "f7e2285d-6d03-4a2a-a79f-ceee1eafb90f"
+      "id": "517cd913-6932-4990-a544-4e6f672fa3a5"
     },
     {
       "cell_type": "code",
@@ -1029,7 +973,7 @@
       "source": [
         "(update)"
       ],
-      "id": "04a128c1-3890-420f-8bf0-1a1faaabfaf0"
+      "id": "98013cc2-6fad-4e21-8519-bb407304be5b"
     },
     {
       "cell_type": "code",
@@ -1049,7 +993,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "1ba87b45-d11b-40b1-a4b9-f88cc13dfc6a"
+      "id": "933db48a-2374-474d-88e7-b4cc764936a6"
     },
     {
       "cell_type": "code",
@@ -1081,7 +1025,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "e71408d8-c177-4ff1-8012-f116f35015fa"
+      "id": "694d1d8f-23e3-4819-903b-7d569045cdf1"
     },
     {
       "cell_type": "code",
@@ -1101,7 +1045,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "529fc4ac-ab48-45f7-8f54-0bbe04c52b03"
+      "id": "9ebcba9e-9033-4a5d-a85a-a2db43033404"
     },
     {
       "cell_type": "code",
@@ -1133,7 +1077,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "d7aa7c86-74a9-405d-829c-d9f06c849ef6"
+      "id": "e1e02cff-6213-4b4e-b5f4-4667f184b36b"
     },
     {
       "cell_type": "code",
@@ -1199,7 +1143,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "13a9681c-0238-47ed-92ca-72e1a0d6bcd5"
+      "id": "34380d99-1bd5-4d55-8735-34f99b57f5b5"
     },
     {
       "cell_type": "code",
@@ -1236,7 +1180,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "90ebfb53-44e4-4a07-8d03-ebaee7de386a"
+      "id": "0b32290b-602e-4b55-a042-51d33538f44e"
     },
     {
       "cell_type": "code",
@@ -1290,7 +1234,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "f9cfff81-e5b8-498d-8c23-dac6e619a93f"
+      "id": "60bbb450-34ca-4bdf-9184-5e2bfab66313"
     },
     {
       "cell_type": "code",
@@ -1310,7 +1254,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "1d674b2f-657a-4513-a8d8-e5e728148b43"
+      "id": "ef7276b1-9d84-420b-bf4d-3b9a6b8eb2ab"
     },
     {
       "cell_type": "code",
@@ -1350,7 +1294,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "4a85d160-e75d-4c4d-ac62-cef87c3eeebe"
+      "id": "43d2a870-db32-4141-9880-52b35b2d6296"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1318,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "499bcd98-6696-4ceb-a43e-11d3efeaf395"
+      "id": "3ca194b4-8197-408e-8f31-974592ce0fbb"
     },
     {
       "cell_type": "code",
@@ -1428,7 +1372,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "5acbfb12-ccbf-40cb-9ad3-931ebd81e528"
+      "id": "084577bb-c037-4c07-ade3-a98866db8e22"
     },
     {
       "cell_type": "code",
@@ -1449,7 +1393,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "d2e85677-2877-405d-8490-8ae4ad8bdfec"
+      "id": "48c48e9d-6acf-490a-9721-1856e4cd14b1"
     },
     {
       "cell_type": "code",
