--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "8704f7fb-b2f2-4cf5-b167-caf6c479b393"
+      "id": "6958b1e9-1d76-462e-8370-6ddd0da75a65"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "02f560e3-2e48-4439-8a2a-0fd36a982401"
+      "id": "db13e432-d655-4fb9-989f-fda91eddce30"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "00ad8f18-51e8-4eff-a9d9-30b8b0bc058e"
+      "id": "84ed5139-b52c-4197-81a8-cca320b6d882"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "8c2ecc34-377b-463c-a296-af15b6fcb434"
+      "id": "dc2a0014-10c1-4ea9-a91f-072ed6912481"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "307260a6-c0e5-4f24-b39d-95377aef8474"
+      "id": "26289c87-856e-4e8a-aaa5-b765fbf592d2"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "30bff603-8a92-40cd-8ff4-0aeb8ac780cb"
+      "id": "74cadf50-ecb6-42f2-b511-bf99eef041d0"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "9cc061a1-b623-4738-a6a1-25821ce1f6d7"
+      "id": "71044c25-4d3e-4ff5-86d6-dea700a41547"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "3112eea6-60d1-4198-828b-8422199559b2"
+      "id": "c451e403-fb49-4186-8d29-562c5fca7bd3"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "2c0fec50-4471-48ff-b294-01eb3ca00beb"
+      "id": "c483d14f-d960-4e2a-9647-256bb82267f5"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "d9e3c4d6-7107-4ffd-a725-175262da9a3f"
+      "id": "9086b300-d09d-4d67-b3c8-e2ccd0968415"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "62336bef-a11f-4b99-9323-875ef6bf8c86"
+      "id": "bf698d00-a7d1-4335-87d6-685ccf68e617"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "1afc5cfe-695a-4d2b-9831-de43ecef6283"
+      "id": "702a637d-6510-49f6-8544-927ec48892d2"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "9daac924-1135-4bb5-862c-ee31db916143"
+      "id": "e2dbf655-712a-4ddb-956a-0a8042663d95"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "51df1433-02cf-4ca6-9f8d-d0f03b0cd2b9"
+      "id": "10551da9-bc43-4aea-b2e1-75a82c1b3b15"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "1ce35105-7837-4e30-af34-6b10d6288245"
+      "id": "358cc19c-ad0d-4a7a-b437-9f3179328815"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "afd05c17-fed7-46d0-8e6d-12bcb56e60c7"
+      "id": "efc38e56-d98e-45a2-b6cb-3f9660ffa629"
     },
     {
       "cell_type": "code",
