--- a/posts/15wk-1.ipynb
+++ b/posts/15wk-1.ipynb
@@ -466,7 +466,8 @@
    "source": [
     "`-` Lunar Lander: 요약\n",
     "\n",
-    "**Observation Space (관찰 공간)** -- 8개의 연속적인 변수\n",
+    "**Observation Space (State Space)** -- 8개의 변수 \n",
+    "\n",
     "1. 착륙선의 x 좌표\n",
     "2. 착륙선의 y 좌표\n",
     "3. 착륙선의 x 속도\n",
@@ -476,13 +477,15 @@
     "7. 왼쪽 다리가 땅에 닿아있는지 여부 (1 또는 0)\n",
     "8. 오른쪽 다리가 땅에 닿아있는지 여부 (1 또는 0)\n",
     "\n",
-    "**Action Space (행동 공간)** -- 4개의 이산적인 행동 \n",
+    "**Action Space** -- 4개의 변수\n",
+    "\n",
     "1. {0 : 아무 행동도 하지 않음}\n",
     "2. {1 : 왼쪽 엔진 발사 (오른쪽으로 기울임)}\n",
     "3. {2 : 메인 엔진 발사 (위로 밀어 올림)} \n",
     "4. {3 : 오른쪽 엔진 발사 (왼쪽으로 기울임)}\n",
     "\n",
-    "**Reward (보상)** \n",
+    "**Reward** \n",
+    "\n",
     "- **거리 보상**: 착륙 패드에 가까울수록 보상 증가\n",
     "- **속도 보상**: 속도가 낮을수록 보상 증가\n",
     "- **각도 보상**: 각도가 수직에 가까울수록 보상 증가\n",
@@ -3719,6 +3722,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b3f9c948-0e40-462b-8f04-d124479a6f71",
+   "metadata": {},
+   "source": [
+    "## A. `q_net`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c9dae3d7-b511-4a75-bb0f-12825867f6c2",
    "metadata": {},
    "source": [
@@ -4127,582 +4138,6 @@
     "                # step4 \n",
     "                self.optimizr.step()\n",
     "                self.optimizr.zero_grad() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "b22fb206-6853-469b-9a0b-24dfa409c7de",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "에피소드:100\t경험(t):8723\t점수(에피소드):-144.40\t게임시간(에피소드):87.23\t\n",
-      "에피소드:200\t경험(t):17482\t점수(에피소드):-149.34\t게임시간(에피소드):87.59\t\n",
-      "에피소드:300\t경험(t):26252\t점수(에피소드):-170.12\t게임시간(에피소드):87.70\t\n",
-      "에피소드:400\t경험(t):35031\t점수(에피소드):-137.26\t게임시간(에피소드):87.79\t\n",
-      "에피소드:500\t경험(t):43879\t점수(에피소드):-141.48\t게임시간(에피소드):88.48\t\n"
-     ]
-    }
-   ],
-   "source": [
-    "env = gym.make(\"LunarLander-v2\",render_mode = 'rgb_array')\n",
-    "agent = AgentRandom(env)\n",
-    "#--#\n",
-    "for _ in range(500):\n",
-    "    agent.current_state,_ = env.reset()\n",
-    "    agent.score = 0 \n",
-    "    for t in range(100):\n",
-    "        # step1: 행동\n",
-    "        agent.act()\n",
-    "        # step2: 보상\n",
-    "        agent.next_state, agent.reward, agent.terminated,_,_ = env.step(agent.action)\n",
-    "        # step3: 저장 & 학습\n",
-    "        agent.save_experience()\n",
-    "        agent.learn()\n",
-    "        # step4: \n",
-    "        agent.current_state = agent.next_state\n",
-    "        if agent.terminated: break\n",
-    "    agent.scores.append(agent.score) \n",
-    "    agent.playtimes.append(t+1)\n",
-    "    agent.n_episodes = agent.n_episodes + 1 \n",
-    "    #---#\n",
-    "    logfreq = 100\n",
-    "    if (agent.n_episodes % logfreq) == 0: \n",
-    "        print(\n",
-    "            f\"에피소드:{agent.n_episodes}\\t\"\n",
-    "            f\"경험(t):{agent.n_experiences}\\t\"\n",
-    "            f\"점수(에피소드):{np.mean(agent.scores[-logfreq:]):.2f}\\t\"\n",
-    "            f\"게임시간(에피소드):{np.mean(agent.playtimes[-logfreq:]):.2f}\\t\"\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "261e9dbd-bc55-4ab6-b85b-2dcd90ac4457",
-   "metadata": {},
-   "source": [
-    "# 7. `AgentExplorer`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d59b2cb-04fb-4afd-92f9-eb508caf233e",
-   "metadata": {},
-   "source": [
-    "## A. `q_net`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3e589c24-eb00-415c-893d-ac5c87b87f85",
-   "metadata": {},
-   "source": [
-    "`-` 원래는 `agent.q` 에 해당하는 것임. 이전에서는 `agent.q`를 (4,4,4) shape의 numpy array 를 사용했는데 여기서는 동일방식을 쓰기 어려움\n",
-    "\n",
-    "- 4x4 grid: 상태공간의 차원은 2차원이며 가질수 있는 값은 16개, 각 상태공간에서 할수 있는 행동이 4개 -> 총 16*4의 경우의 수에 대한 reward만 조사하면 되었음\n",
-    "- LunarLander: 상태공간의 차원은 8차원이지만 가질수 있는 값의 범위는 무한대 -> 무수히 많은 경우에 대한 reward 값을 조사하는건 현실적으로 불가능 "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3683ba85-86ab-460b-be68-3916ac5784d8",
-   "metadata": {},
-   "source": [
-    "`-` 4x4 코드 \n",
-    "\n",
-    "```Python\n",
-    "class AgentGreedy(AgentRandom):\n",
-    "    def __init__(self,env):\n",
-    "        super().__init__(env)\n",
-    "        #--#\n",
-    "        self.q_table = np.zeros([4,4,4])\n",
-    "    def learn(self): # q_table \n",
-    "        s1,s2 = self.current_state\n",
-    "        ss1,ss2 = self.next_state\n",
-    "        a = self.action\n",
-    "        r = self.reward\n",
-    "        q_hat = self.q_table[s1,s2,a] \n",
-    "        if self.terminated:\n",
-    "            q = r \n",
-    "        else:\n",
-    "            future_reward = self.q_table[ss1,ss2,:].max()\n",
-    "            q = r + 0.99 * future_reward \n",
-    "        diff = q - q_hat\n",
-    "        self.q_table[s1,s2,a] = q_hat + 0.05 * diff         \n",
-    "    def act(self):\n",
-    "        if self.n_experiences < 3000:\n",
-    "            self.action = self.action_space.sample()\n",
-    "        else: \n",
-    "            s1,s2 = self.current_state \n",
-    "            self.action = self.q_table[s1,s2,:].argmax()\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "748d9f81-ff0a-48fc-ba23-545db82ba1e3",
-   "metadata": {},
-   "source": [
-    "`수정 1`. `agent.q_table` 에 대응하는 과정 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "9d21f88b-bf06-4f1c-9f94-723163310d8c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "agent.q_net = torch.nn.Sequential(\n",
-    "    torch.nn.Linear(8,256),\n",
-    "    torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(256,128),\n",
-    "    torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(128,64),\n",
-    "    torch.nn.ReLU(),\n",
-    "    torch.nn.Linear(64,4)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "b85c25c3-03f6-4fca-8592-663b07acc658",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Sequential(\n",
-       "  (0): Linear(in_features=8, out_features=256, bias=True)\n",
-       "  (1): ReLU()\n",
-       "  (2): Linear(in_features=256, out_features=128, bias=True)\n",
-       "  (3): ReLU()\n",
-       "  (4): Linear(in_features=128, out_features=64, bias=True)\n",
-       "  (5): ReLU()\n",
-       "  (6): Linear(in_features=64, out_features=4, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "agent.q_net # <- 8개의 숫자가 입력으로 오면 4개의 숫자를 리턴하는 함수 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "6fef26bf-9bbd-408d-b90c-d36853670e24",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 0.0359, -0.0010, -0.0519, -0.0496], grad_fn=<ViewBackward0>)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = torch.tensor(agent.current_state)\n",
-    "agent.q_net(s)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "598ccfec-1873-44c2-bb95-46d690327225",
-   "metadata": {},
-   "source": [
-    "- q_net은 8개의 숫자가 입력으로 오면 4개의 숫자가 리턴되는 함수이다. \n",
-    "- 해석을 하면 8개의 숫자는 state를 나타내는 숫자로 이해할 수 있고 4개의 숫자는 각 action에 대한 q값으로 해석할 수 있다.\n",
-    "- 하지만 이 숫자가 합리적인건 아님 (아무숫자임)\n",
-    "- q_net의 특징: 고정된 함수가 아니고 데이터를 이용하여 점점 더 그럴듯한 숫자를 뱉어내도록 학습할 수 있는 함수이다. (뉴럴네트워크) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b94d0f18-2697-4b2c-b130-7aa50400286b",
-   "metadata": {},
-   "source": [
-    "`2`. `q_hat`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "546fa364-c191-4c62-b9de-2658b0e43c37",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 0.0359, -0.0010, -0.0519, -0.0496], grad_fn=<ViewBackward0>)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = torch.tensor(agent.current_state)\n",
-    "agent.q_net(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "55c0f6d5-acee-40db-908e-7dda5c416957",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.0359, grad_fn=<SelectBackward0>)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = torch.tensor(agent.current_state)\n",
-    "a = torch.tensor(agent.action)\n",
-    "agent.q_net(s)[a]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "65071fbe-0637-484a-bc91-4896f9d16c11",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "state = tensor([ 0.8697, -0.1577,  1.4517, -0.0860, -0.9939, -1.4546,  1.0000,  0.0000])\n",
-      "q_value(cucurrent_state,:) = tensor([ 0.0359, -0.0010, -0.0519, -0.0496])\n",
-      "action = 0\n",
-      "q_value(cucurrent_state,action) = 0.03591235727071762\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = torch.tensor(agent.current_state)\n",
-    "a = torch.tensor(agent.action)\n",
-    "ss = torch.tensor(agent.next_state)\n",
-    "r = torch.tensor(agent.reward)\n",
-    "#--#\n",
-    "print(\n",
-    "    f\"state = {s}\\n\"\n",
-    "    f\"q_value(cucurrent_state,:) = {agent.q_net(s).data}\\n\"\n",
-    "    f\"action = {a}\\n\"\n",
-    "    f\"q_value(cucurrent_state,action) = {agent.q_net(s)[a]}\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "71e589f3-1e9f-4970-9002-9137a103c961",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.0359, grad_fn=<SelectBackward0>)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = torch.tensor(agent.current_state)\n",
-    "a = torch.tensor(agent.action)\n",
-    "ss = torch.tensor(agent.next_state)\n",
-    "r = torch.tensor(agent.reward)\n",
-    "#--#\n",
-    "qhat = agent.q_net(s)[a]\n",
-    "qhat"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6377774-a1d3-4863-b70c-d756886af7c0",
-   "metadata": {},
-   "source": [
-    "`3`. `q` ($q = r + 0.99 \\times {\\tt future\\_reward}$)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "9dfb27a0-a220-407a-a435-e9fc0300acf2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "if agent.terminated:\n",
-    "    q = agent.reward\n",
-    "else:\n",
-    "    future_reward = agent.q_net(s).max().data\n",
-    "    q = agent.reward + 0.99 * future_reward "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "911f8074-ca82-4741-b90d-7d2167316343",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-100"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4875557-633b-452a-8d21-4ea85020db5a",
-   "metadata": {},
-   "source": [
-    "`4`. `q_hat` 을 점점 `q` 와 비슷하게 만드는 과정"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "1c411ab9-d658-4d3e-8cf4-2960ef556e51",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "exp = list(zip(\n",
-    "    agent.current_states,\n",
-    "    agent.actions,\n",
-    "    agent.rewards,\n",
-    "    agent.next_states,\n",
-    "    agent.terminations\n",
-    "))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "e6b6e04a-dfd8-4e97-a11c-874d40f8e3eb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([-0.1722,  0.9442, -0.4140, -0.7549,  0.2740,  0.0801,  0.0000,  0.0000]),\n",
-       " tensor(1),\n",
-       " tensor(-1.9576),\n",
-       " tensor([-0.1764,  0.9266, -0.4233, -0.7838,  0.2800,  0.1206,  0.0000,  0.0000]),\n",
-       " tensor(False))"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "agent.batch_size = 4 \n",
-    "batch = random.sample(exp,agent.batch_size)\n",
-    "batch[0] # s,a,r,ss,terminated"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "f39d003e-61b0-41e7-8ffc-bece41dc42b0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "agent.optimizr = torch.optim.Adam(agent.q_net.parameters())\n",
-    "#--#\n",
-    "for epoc in range(5):\n",
-    "    memory = list(zip(agent.current_states,agent.actions,agent.rewards,agent.next_states,agent.terminations))\n",
-    "    batch = random.sample(memory,4)\n",
-    "    ## 1~2 \n",
-    "    loss = 0 \n",
-    "    for s,a,r,ss,terminated in batch:\n",
-    "        # 1. q_hat을 구한다. \n",
-    "        q_hat = agent.q_net(s)[a]\n",
-    "        # 2. loss를 계산한다. 그런데 q가 없네? \n",
-    "        if terminated: \n",
-    "            q = r\n",
-    "        else: \n",
-    "            future_reward = agent.q_net(ss).max().data\n",
-    "            q = r + 0.99 * future_reward\n",
-    "        loss = loss + (q_hat-q)**2\n",
-    "    loss = loss/agent.batch_size\n",
-    "    ## 3 \n",
-    "    loss.backward()\n",
-    "    ## 4 \n",
-    "    agent.optimizr.step()\n",
-    "    agent.optimizr.zero_grad()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c8ca9798-c99a-4d97-ae2f-f8483a634143",
-   "metadata": {},
-   "source": [
-    "`5`. 행동..? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "83497267-d8ae-4e31-8428-669a74ca27d2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(2)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "agent.q_net(s).argmax()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "f5af2ff0-e5da-4f24-ae7c-f5ad73097cb2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "agent.eps = 0.5 \n",
-    "if np.random.rand() < agent.eps:\n",
-    "    agent.action = agent.action_space.sample() \n",
-    "else:\n",
-    "    s = torch.tensor(agent.current_state)\n",
-    "    agent.action = agent.q_net(s).argmax().item()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dd290c42-ed2b-4948-8bd7-16548a991190",
-   "metadata": {},
-   "source": [
-    "## B. 클래스의 설계 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "06546d6b-a125-417b-9e10-b5421c8a9869",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "class AgentExplorer(AgentRandom):\n",
-    "    def __init__(self,env):\n",
-    "        super().__init__(env)\n",
-    "        self.eps = 0\n",
-    "        self.q_net = torch.nn.Sequential(\n",
-    "            torch.nn.Linear(8,256), \n",
-    "            torch.nn.ReLU(),\n",
-    "            torch.nn.Linear(256,128),\n",
-    "            torch.nn.ReLU(),\n",
-    "            torch.nn.Linear(128,64),\n",
-    "            torch.nn.ReLU(),\n",
-    "            torch.nn.Linear(64,4)\n",
-    "        )\n",
-    "        self.batch_size = 64\n",
-    "        self.optimizr = torch.optim.Adam(self.q_net.parameters(),lr=0.0001)\n",
-    "    def act(self):\n",
-    "        if np.random.rand() < self.eps:\n",
-    "            self.action = self.action_space.sample() \n",
-    "        else:\n",
-    "            s = torch.tensor(self.current_state)\n",
-    "            self.action = self.q_net(s).argmax().item()\n",
-    "    def learn(self):\n",
-    "        if self.n_experiences < self.buffer_size: \n",
-    "            pass \n",
-    "        else: \n",
-    "            for epoc in range(1):\n",
-    "                memory = list(zip(self.current_states,self.actions,self.rewards,self.next_states,self.terminations))\n",
-    "                batch = random.sample(memory,self.batch_size)\n",
-    "                ## 1~2 \n",
-    "                loss = 0 \n",
-    "                for s,a,r,ss,terminated in batch:\n",
-    "                    # 1. q_hat을 구한다. \n",
-    "                    q_hat = self.q_net(s)[a]\n",
-    "                    # 2. loss를 계산한다. 그런데 q가 없네? \n",
-    "                    if terminated: \n",
-    "                        q = r\n",
-    "                    else: \n",
-    "                        future_reward = agent.q_net(ss).max().data\n",
-    "                        q = r + 0.99*future_reward\n",
-    "                    loss = loss + (q_hat-q)**2\n",
-    "                loss = loss/self.batch_size\n",
-    "                ## 3 \n",
-    "                loss.backward()\n",
-    "                ## 4 \n",
-    "                self.optimizr.step()\n",
-    "                self.optimizr.zero_grad()"
    ]
   },
   {
