--- a/docs/posts/15wk-2.out.ipynb
+++ b/docs/posts/15wk-2.out.ipynb
@@ -9,7 +9,7 @@
         "최규빈  \n",
         "2024-06-13"
       ],
-      "id": "395c2154-926f-48e2-8296-98a95a876519"
+      "id": "4a64e610-f24e-45a4-8131-c48f190d6a08"
     },
     {
       "cell_type": "code",
@@ -40,7 +40,7 @@
       "source": [
         "# `1`. 추천시스템 – 30점"
       ],
-      "id": "6cf95a5e-51c3-4d82-b085-cf3a0f88fe26"
+      "id": "23a4ef58-b746-4ae3-a714-cd7870c53820"
     },
     {
       "cell_type": "code",
@@ -91,30 +91,47 @@
         "2천만 개의 영화 평점과 메타데이터를 포함하고 있다. 주요 파일과 그 내용은\n",
         "다음과 같다:\n",
         "\n",
-        "`1`. **ratings.csv**: - **userId**: 사용자의 고유 ID - **movieId**:\n",
-        "영화의 고유 ID - **rating**: 사용자가 부여한 평점 (1.0에서 5.0 사이의\n",
-        "값) - **timestamp**: 평점이 부여된 시간 (유닉스 타임스탬프 형식)\n",
+        "`1`. **ratings.csv**:\n",
         "\n",
-        "`2`. **movies.csv**: - **movieId**: 영화의 고유 ID - **title**: 영화\n",
-        "제목 - **genres**: 영화 장르 (여러 개의 장르가 ’\\|’로 구분됨)\n",
+        "-   **userId**: 사용자의 고유 ID\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **rating**: 사용자가 부여한 평점 (1.0에서 5.0 사이의 값)\n",
+        "-   **timestamp**: 평점이 부여된 시간 (유닉스 타임스탬프 형식)\n",
         "\n",
-        "`3`. **tags.csv**: - **userId**: 사용자의 고유 ID - **movieId**: 영화의\n",
-        "고유 ID - **tag**: 사용자가 부여한 태그 - **timestamp**: 태그가 부여된\n",
-        "시간 (유닉스 타임스탬프 형식)\n",
+        "`2`. **movies.csv**:\n",
         "\n",
-        "`4`. **genome-scores.csv**: - **movieId**: 영화의 고유 ID - **tagId**:\n",
-        "태그의 고유 ID - **relevance**: 해당 태그가 영화에 얼마나 관련 있는지\n",
-        "나타내는 점수 (0.0에서 1.0 사이의 값)\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **title**: 영화 제목\n",
+        "-   **genres**: 영화 장르 (여러 개의 장르가 ’\\|’로 구분됨)\n",
         "\n",
-        "`5`. **genome-tags.csv**: - **tagId**: 태그의 고유 ID - **tag**: 태그의\n",
-        "이름\n",
+        "`3`. **tags.csv**:\n",
         "\n",
-        "`6`. **links.csv**: - **movieId**: 영화의 고유 ID - **imdbId**:\n",
-        "IMDB에서의 영화 ID - **tmdbId**: TMDB에서의 영화 ID\n",
+        "-   **userId**: 사용자의 고유 ID\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **tag**: 사용자가 부여한 태그\n",
+        "-   **timestamp**: 태그가 부여된 시간 (유닉스 타임스탬프 형식)\n",
+        "\n",
+        "`4`. **genome-scores.csv**:\n",
+        "\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **tagId**: 태그의 고유 ID\n",
+        "-   **relevance**: 해당 태그가 영화에 얼마나 관련 있는지 나타내는 점수\n",
+        "    (0.0에서 1.0 사이의 값)\n",
+        "\n",
+        "`5`. **genome-tags.csv**:\n",
+        "\n",
+        "-   **tagId**: 태그의 고유 ID\n",
+        "-   **tag**: 태그의 이름\n",
+        "\n",
+        "`6`. **links.csv**:\n",
+        "\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **imdbId**: IMDB에서의 영화 ID\n",
+        "-   **tmdbId**: TMDB에서의 영화 ID\n",
         "\n",
         "이중에서 1,2의 데이터만 사용하여 추천시스템을 설계하기로 하자."
       ],
-      "id": "7cc30917-8feb-4f69-b8ba-ff9e29797fca"
+      "id": "c46f03a9-23b6-474e-8832-3610c7142d4c"
     },
     {
       "cell_type": "code",
@@ -142,26 +159,45 @@
         "간단히 설명하면 아래와 같다.\n",
         "\n",
         "`1`. `df_ratings`와 `df_movies` CSV 파일을 읽어 데이터프레임으로 만든다.\n",
-        "`python    df_ratings = pd.read_csv(\"ml-20m/ratings.csv\")    df_movies = pd.read_csv(\"ml-20m/movies.csv\")`\n",
+        "\n",
+        "``` python\n",
+        "df_ratings = pd.read_csv(\"ml-20m/ratings.csv\")\n",
+        "df_movies = pd.read_csv(\"ml-20m/movies.csv\")\n",
+        "```\n",
         "\n",
         "`2`. 평점 데이터와 영화 데이터를 합쳐 하나의 데이터프레임\n",
         "`df_train_all`을 만든다.\n",
-        "`python    df_train_all = pd.merge(df_ratings, df_movies)`\n",
+        "\n",
+        "``` python\n",
+        "df_train_all = pd.merge(df_ratings, df_movies)\n",
+        "```\n",
         "\n",
         "`3`. 데이터가 너무 많아 5000명의 유저만 랜덤으로 샘플링한다.\n",
-        "`python    userId_sampled = np.random.choice(df_train_all.userId.unique(), 5000)`\n",
+        "\n",
+        "``` python\n",
+        "userId_sampled = np.random.choice(df_train_all.userId.unique(), 5000)\n",
+        "```\n",
         "\n",
         "`4`. 샘플링된 5000명의 유저 데이터만 포함하는 새로운 데이터프레임\n",
         "`df_train`을 만든다.\n",
-        "`python    df_train = df_train_all.query(\"userId in @userId_sampled\").reset_index(drop=True)`\n",
+        "\n",
+        "``` python\n",
+        "df_train = df_train_all.query(\"userId in @userId_sampled\").reset_index(drop=True)\n",
+        "```\n",
         "\n",
         "`5`. 유저 ID를 0부터 시작하는 인덱스로 재조정한다.\n",
-        "`python    df_train[\"userId\"] = df_train.userId.map({user: i for i, user in enumerate(set(df_train.userId))})`\n",
+        "\n",
+        "``` python\n",
+        "df_train[\"userId\"] = df_train.userId.map({user: i for i, user in enumerate(set(df_train.userId))})\n",
+        "```\n",
         "\n",
         "`6`. 영화 ID도 0부터 시작하는 인덱스로 재조정한다.\n",
-        "`python    df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})`"
+        "\n",
+        "``` python\n",
+        "df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})\n",
+        "```"
       ],
-      "id": "022e639d-20ba-4695-bd2f-ca6ec97ca2e2"
+      "id": "4d2072c8-5636-4a59-81d9-adba498f9b78"
     },
     {
       "cell_type": "code",
@@ -183,7 +219,7 @@
         "나누고 적절한 추천시스템을 설계하고 학습하라. 학습결과를 **validation\n",
         "loss**로 검증하라."
       ],
-      "id": "f0b4e788-61b5-4e54-ac28-a6c7018eb69a"
+      "id": "58d1f1ef-bf0e-49ad-915d-aab1c5f1a8d8"
     },
     {
       "cell_type": "code",
@@ -252,7 +288,7 @@
         "    print(f\"epoch: {epoc+1}\\t val_loss: {loss_fn(net(X_val).data,y_val):.4f}\")\n",
         "```"
       ],
-      "id": "b4ecab21-1772-47b6-b605-64cabb7cafe7"
+      "id": "43d2c64a-fb99-4c63-8bc6-8501af2db1eb"
     },
     {
       "cell_type": "code",
@@ -307,7 +343,7 @@
         "\n",
         "`(2)` 아래는 유저 2265에 대한 정보이다."
       ],
-      "id": "b271aaae-4730-40d8-84f4-230103478a2a"
+      "id": "029c76e6-8f52-42e0-a9eb-6c2689c56262"
     },
     {
       "cell_type": "code",
@@ -329,7 +365,7 @@
         "편이다) 영화 {49: `Usual Suspects, The (1995)`} 는 스리럴중에서도 인기가\n",
         "있는 영화인데, 유저 2265는 아직 이 영화를 시청하지 않은듯 보인다."
       ],
-      "id": "ba71bc66-bcef-4dbb-abb9-cabca5532f43"
+      "id": "f07021b3-b5b2-4f15-b8e1-32c2a46ea0d5"
     },
     {
       "cell_type": "code",
@@ -354,7 +390,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "4ae03355-3ef4-4941-a0a8-75baf86995ec"
+      "id": "acd36af0-850d-4a3d-a911-060d21a55381"
     },
     {
       "cell_type": "code",
@@ -429,7 +465,7 @@
         "아래는 OpenAI Gym 라이브러리에서 제공하는 환경 Frozen Lake를 구체화하여\n",
         "변수 `env`에 저장하는 코드이다."
       ],
-      "id": "7c0d861b-8315-4fbe-abfe-e656cd67fb38"
+      "id": "3e62cf8d-a60f-4147-83f4-a4b697d15c13"
     },
     {
       "cell_type": "code",
@@ -470,7 +506,7 @@
         "아래는 `show` 함수이며, 이는 `env`의 현재상태를 렌더링해주는 역할을\n",
         "한다."
       ],
-      "id": "c85a8a29-d12d-4968-a578-4952c3d7fddc"
+      "id": "f9e2bf44-af8a-4176-aaa3-d25258e526e1"
     },
     {
       "cell_type": "code",
@@ -494,7 +530,7 @@
       "source": [
         "`show()` 함수의 사용방법은 아래와 같다."
       ],
-      "id": "a9a0a05b-63ab-4261-b5db-c9d5cd19a2bf"
+      "id": "49244ca8-fc56-4228-8fc9-c57ef8e99531"
     },
     {
       "cell_type": "code",
@@ -524,7 +560,7 @@
         "적당한 위의 환경에 대응하는 Agent를 설계하고 `q_net`를 이용하여 올바른\n",
         "행동을 학습하라. 아래는 학습된 결과의 예시이다."
       ],
-      "id": "acba45af-4eae-45dc-9ec8-f107bd4e14c4"
+      "id": "1fb3a6cf-011d-4488-b9be-bc6c63ce9436"
     },
     {
       "cell_type": "code",
@@ -569,7 +605,7 @@
       "source": [
         "**힌트1:** 아래의 에이전트를 설계에 이용하라."
       ],
-      "id": "de438840-4b1d-401b-8324-d9eb64d2826b"
+      "id": "7db4d578-cb40-45b1-adf5-9db1d3941c12"
     },
     {
       "cell_type": "code",
@@ -635,7 +671,7 @@
         "`(1)` Dropout Layer를 추가하면 layer의 추가로 인해 모형이 더 복잡해지며\n",
         "그 결과 모형이 과적합될 수 있다."
       ],
-      "id": "ff80ad17-11e4-49bc-a7a9-2b18e2de1b37"
+      "id": "eeeab583-4189-4b0d-9026-fd56dcec313f"
     }
   ],
   "nbformat": 4,
