--- a/docs/posts/15wk-2.out.ipynb
+++ b/docs/posts/15wk-2.out.ipynb
@@ -7,9 +7,11 @@
         "# 15wk-2: 기말고사\n",
         "\n",
         "최규빈  \n",
-        "2024-06-13"
+        "2024-06-13\n",
+        "\n",
+        "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/15wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>"
       ],
-      "id": "4a64e610-f24e-45a4-8131-c48f190d6a08"
+      "id": "487ca38b-bd0e-4d04-8ba8-734e25bc8f7b"
     },
     {
       "cell_type": "code",
@@ -40,7 +42,7 @@
       "source": [
         "# `1`. 추천시스템 – 30점"
       ],
-      "id": "23a4ef58-b746-4ae3-a714-cd7870c53820"
+      "id": "7f419731-6ca2-4046-b84a-cbbfed5f3af2"
     },
     {
       "cell_type": "code",
@@ -131,7 +133,7 @@
         "\n",
         "이중에서 1,2의 데이터만 사용하여 추천시스템을 설계하기로 하자."
       ],
-      "id": "c46f03a9-23b6-474e-8832-3610c7142d4c"
+      "id": "1bd7beb1-8b58-4099-af6f-2eea72949621"
     },
     {
       "cell_type": "code",
@@ -197,7 +199,7 @@
         "df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})\n",
         "```"
       ],
-      "id": "4d2072c8-5636-4a59-81d9-adba498f9b78"
+      "id": "e62c01f0-9319-4e30-b64b-b77dfcd91348"
     },
     {
       "cell_type": "code",
@@ -219,7 +221,7 @@
         "나누고 적절한 추천시스템을 설계하고 학습하라. 학습결과를 **validation\n",
         "loss**로 검증하라."
       ],
-      "id": "58d1f1ef-bf0e-49ad-915d-aab1c5f1a8d8"
+      "id": "28d6d6b7-299f-4d9d-85f8-3b1ca24c6535"
     },
     {
       "cell_type": "code",
@@ -288,7 +290,7 @@
         "    print(f\"epoch: {epoc+1}\\t val_loss: {loss_fn(net(X_val).data,y_val):.4f}\")\n",
         "```"
       ],
-      "id": "43d2c64a-fb99-4c63-8bc6-8501af2db1eb"
+      "id": "aeaacf2d-b6e7-4d92-b985-de097dc697fb"
     },
     {
       "cell_type": "code",
@@ -343,7 +345,7 @@
         "\n",
         "`(2)` 아래는 유저 2265에 대한 정보이다."
       ],
-      "id": "029c76e6-8f52-42e0-a9eb-6c2689c56262"
+      "id": "f2db2b3c-6123-4b50-971a-b91cf3e63e5a"
     },
     {
       "cell_type": "code",
@@ -365,7 +367,7 @@
         "편이다) 영화 {49: `Usual Suspects, The (1995)`} 는 스리럴중에서도 인기가\n",
         "있는 영화인데, 유저 2265는 아직 이 영화를 시청하지 않은듯 보인다."
       ],
-      "id": "f07021b3-b5b2-4f15-b8e1-32c2a46ea0d5"
+      "id": "2c43fda6-62df-4ea5-b2e9-94dd5df3acb0"
     },
     {
       "cell_type": "code",
@@ -390,7 +392,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "acd36af0-850d-4a3d-a911-060d21a55381"
+      "id": "b1d202d9-1126-446f-aebe-c67cb99d6435"
     },
     {
       "cell_type": "code",
@@ -465,7 +467,7 @@
         "아래는 OpenAI Gym 라이브러리에서 제공하는 환경 Frozen Lake를 구체화하여\n",
         "변수 `env`에 저장하는 코드이다."
       ],
-      "id": "3e62cf8d-a60f-4147-83f4-a4b697d15c13"
+      "id": "6faa6999-8a71-449a-b4bf-b39dc2ccd2fa"
     },
     {
       "cell_type": "code",
@@ -506,7 +508,7 @@
         "아래는 `show` 함수이며, 이는 `env`의 현재상태를 렌더링해주는 역할을\n",
         "한다."
       ],
-      "id": "f9e2bf44-af8a-4176-aaa3-d25258e526e1"
+      "id": "6c50b715-44e0-4616-9db1-7fbebe84af6a"
     },
     {
       "cell_type": "code",
@@ -530,7 +532,7 @@
       "source": [
         "`show()` 함수의 사용방법은 아래와 같다."
       ],
-      "id": "49244ca8-fc56-4228-8fc9-c57ef8e99531"
+      "id": "33bc412b-ad24-4c8f-ba4f-0d3efd9fd1f7"
     },
     {
       "cell_type": "code",
@@ -560,7 +562,7 @@
         "적당한 위의 환경에 대응하는 Agent를 설계하고 `q_net`를 이용하여 올바른\n",
         "행동을 학습하라. 아래는 학습된 결과의 예시이다."
       ],
-      "id": "1fb3a6cf-011d-4488-b9be-bc6c63ce9436"
+      "id": "32aeb5b8-c753-4f85-81df-7c9a124f1704"
     },
     {
       "cell_type": "code",
@@ -605,7 +607,7 @@
       "source": [
         "**힌트1:** 아래의 에이전트를 설계에 이용하라."
       ],
-      "id": "7db4d578-cb40-45b1-adf5-9db1d3941c12"
+      "id": "c7f8df13-aed2-41b0-86c3-f099b7c96783"
     },
     {
       "cell_type": "code",
@@ -671,7 +673,7 @@
         "`(1)` Dropout Layer를 추가하면 layer의 추가로 인해 모형이 더 복잡해지며\n",
         "그 결과 모형이 과적합될 수 있다."
       ],
-      "id": "eeeab583-4189-4b0d-9026-fd56dcec313f"
+      "id": "b9765a43-f6c7-411b-9c99-e4191f2b6859"
     }
   ],
   "nbformat": 4,
